--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,4 @@ Press h to open a hovercard with more details.
 data/load_AG300_2010_11_Gross.csv
 data/demographics_load_lookup_table.csv
 data/AG300_Demographics.csv
+AllTariffs.mat
