sending down sample info to python

--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,5 @@ Press h to open a hovercard with more details.
 data/SGSC.csv
 data/SGSC.feather
 !data/.gitkeep.txt
+data/~$SGSC.xlsx
+data/SGSC.xlsx
