--- a/.gitignore
+++ b/.gitignore
@@ -186,9 +186,14 @@ Shop
 Blog
 About
 Press h to open a hovercard with more details.
-data/load_AG300_2010_11_Gross.csv
-data/demographics_load_lookup_table.csv
-data/AG300_Demographics.csv
-data/*
-data/Load_1.csv
+data/SGSC.csv
+data/SGSC.feather
 !data/.gitkeep.txt
+data/~$SGSC.xlsx
+data/SGSC.xlsx
+data/load/SGSC.feather
+data/aemo_raw_cache/*
+*.pkl
+*.xlsx
+tda_log_file.txt
+
