--- a/.gitignore
+++ b/.gitignore
@@ -201,3 +201,7 @@ data/demographics/demo_SGSC.feather
 data/demographics/SGSC-CTCustomer-Household-Data.csv
 temp.py
 
+data/demographics/demo_AG300_G_2010.feather
+data/demographics/demo_SGSC2013.feather
+data/load/AG300_G_2010.feather
+data/load/SGSC2013.feather
